k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: chrome
  labels: { app: chrome }
spec:
  selector: { app: chrome }
  ports:
    - name: cdp
      port: 9222
      targetPort: cdp
